# src/model/types/IActor.ts
@@ -1,0 +1,6 @@
+export interface IActor {
+    actor_id: number;
+    first_name: string;
+    last_name: string;
+    last_update: Date;
+}
